force-app/main/default/objects/Affiliation__c/Affiliation__c.object-meta.xml
<CustomObject>
    <label>Affiliation</label>
    <pluralLabel>Affiliations</pluralLabel>
    <nameField>
        <label>Affiliation Name</label>
        <displayFormat>AFF-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Unified junction object for all party relationships: Patient-HCP, HCP-HCO, and future affiliations. Consolidates relationship metadata (role, status, dates) in a single object per ADR-008/ADR-009.</description>
</CustomObject>