force-app/main/default/objects/Affiliation__c/fields/Account_1__c.field-meta.xml
<CustomField>
    <fullName>Account_1__c</fullName>
    <label>Account 1</label>
    <description>Primary account in the affiliation (e.g., the Patient or HCP). Master-Detail controls sharing — child inherits parent sharing.</description>
    <type>MasterDetail</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Affiliations_As_Primary</relationshipName>
    <relationshipLabel>Affiliations (Primary)</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>