force-app/main/default/objects/Affiliation__c/fields/Account_2__c.field-meta.xml
<CustomField>
    <fullName>Account_2__c</fullName>
    <label>Account 2</label>
    <description>Secondary account in the affiliation (e.g., the HCP or HCO). Lookup rather than master-detail to allow flexible many-to-many.</description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Affiliations_As_Secondary</relationshipName>
    <relationshipLabel>Affiliations (Secondary)</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>