force-app/main/default/objects/Affiliation__c/fields/Affiliation_Type__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Type__c</fullName>
    <label>Affiliation Type</label>
    <description>The type of relationship between the two accounts.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Patient-HCP</fullName><default>false</default><label>Patient-HCP</label></value>
            <value><fullName>HCP-HCO</fullName><default>false</default><label>HCP-HCO</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>