force-app/main/default/objects/Affiliation__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <label>Effective End Date</label>
    <description>Date when this affiliation ended or is expected to end.</description>
    <type>Date</type>
</CustomField>