force-app/main/default/objects/Affiliation__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <label>Effective Start Date</label>
    <description>Date when this affiliation became effective.</description>
    <type>Date</type>
</CustomField>