force-app/main/default/objects/Affiliation__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <label>Is Primary</label>
    <description>Indicates if this is the primary relationship (e.g., primary prescriber).</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>