force-app/main/default/objects/Affiliation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Current status of this affiliation.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Inactive</fullName><default>false</default><label>Inactive</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>